--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,23 +1,77 @@
 body{
     margin: 0;
     font-family: "Source Sans Pro", sans-serif;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
     color: #212529;
-    text-align: left;
-    background-color: #fff;
+    background-color: #101010;
+    overflow-x: hidden;
 }
-
 .header{
     position: relative;
-    height: 80vh;
-    min-height: 600px;
-    background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/home1.jpg);
-    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/home1.jpg);
+    height: 600px;
+    min-height: 700px;
+    background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/home0.jpg);
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/home0.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
     color: white;
+    margin-top: -19px;
+}
+.header div{
+    margin-left: 900px;
+    font-size: 35px;
+    margin-top: 120px;
+    position: absolute;
+    margin-bottom: 0;
+}
+/*.back-arrow-container {*/
+/*    display: flex;*/
+/*    justify-content: space-between;*/
+/*}*/
+
+/*.back-arrow {*/
+/*    font-size: 24px;*/
+/*    color: #000;*/
+/*    text-decoration: none;*/
+/*}*/
+
+/*.back-arrow:hover {*/
+/*    color: #d43076;*/
+/*}*/
+
+nav{
+    background: rgb(21, 21, 21);
+    box-shadow : 0px 4px 8px 2px rgb(0, 0, 0);
+    position: fixed;
+    height: 65px;
+    width: 100%;
+    z-index: 20;
+    font-family: "Open Sans", sans-serif;
+    font-size: 19px;
+}
+nav > ul > li {
+    display: inline-block;
+    cursor: pointer;
+    padding: 10px;
+    font-family: "Open Sans", sans-serif;
+    color: rgb(255, 255, 255);
+    font-size: 14px;
+    position: relative;
+    list-style: none;
+
+}
+.navbar > ul{
+    right: 50px;
+}
+.navbar a,
+.navbar a:focus {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 0 10px 30px;
+    font-size: 14px;
+    color: #ffffff;
+    white-space: nowrap;
+    transition: 0.3s;
 }
