--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,15 @@
 body{
     margin: 0;
-    font-family: "Source Sans Pro", sans-serif;
-    color: #212529;
+    font-family: 'Raleway', sans-serif;
+    color: #999;
     background-color: #101010;
     overflow-x: hidden;
+    line-height: 1.5;
+}
+@media (min-width: 1024px) {
+    #header {
+        background-attachment: fixed;
+    }
 }
 .header{
     position: relative;
@@ -18,7 +24,7 @@ body{
     color: white;
     margin-top: -19px;
 }
-.header div{
+.header aside{
     margin-left: 900px;
     font-size: 35px;
     margin-top: 120px;
@@ -43,27 +49,42 @@ body{
 nav{
     background: rgb(21, 21, 21);
     box-shadow : 0px 4px 8px 2px rgb(0, 0, 0);
-    position: fixed;
     height: 65px;
     width: 100%;
     z-index: 20;
     font-family: "Open Sans", sans-serif;
     font-size: 19px;
+    margin-top: -10px;
 }
-nav > ul > li {
-    display: inline-block;
-    cursor: pointer;
-    padding: 10px;
-    font-family: "Open Sans", sans-serif;
-    color: rgb(255, 255, 255);
-    font-size: 14px;
-    position: relative;
+.navbar ul{
+    display: flex;
+    padding: 0;
     list-style: none;
+    align-items: center;
+    font-family: "Open Sans", sans-serif;
+    margin-left: 960px;
+    margin-top: 10px;
 
 }
-.navbar > ul{
-    right: 50px;
+
+.navbar li{
+    position: relative;
+    margin-top: 12px;
 }
+/*nav > ul > li {*/
+/*    display: inline-block;*/
+/*    cursor: pointer;*/
+/*    padding: 10px;*/
+/*    font-family: "Open Sans", sans-serif;*/
+/*    color: rgb(255, 255, 255);*/
+/*    font-size: 14px;*/
+/*    position: relative;*/
+/*    list-style: none;*/
+
+/*}*/
+/*.navbar > ul{*/
+/*    right: 50px;*/
+/*}*/
 .navbar a,
 .navbar a:focus {
     display: flex;
@@ -74,4 +95,200 @@ nav > ul > li {
     color: #ffffff;
     white-space: nowrap;
     transition: 0.3s;
+    text-decoration: none!important;
+
+}
+.navbar a i,
+.navbar a:focus i {
+    font-size: 12px;
+    line-height: 0;
+    margin-left: 5px;
+}
+
+.navbar a:hover,
+.navbar .active,
+.navbar .active:focus,
+.navbar li:hover>a {
+    color: #da2843;
+}
+.social-icons {
+    list-style-type: none;
+    padding-left: 218px;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    max-width: 180px;
+}
+.social-icons .social-link {
+    font-size: 18px;
+    color: white;
+    margin-top: 30px;
+    text-decoration: none!important;
+
+}
+
+.social-icons .social-link:hover {
+    color: #f3223d;
+
+}
+
+
+/*................About................*/
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -15px;
+    margin-right: -15px;
+    position: relative;
+}
+.about .about-content .personal-info {
+    flex: 0 0 50%;
+    max-width: 60%;
+    margin-top: 40px;
+    box-sizing: border-box;
+}
+.padd-15 {
+    padding-right: 15px;
+    padding-left: 15px;
+    box-sizing: border-box;
+    margin: 0;
+
+}
+#about{
+    margin-top: 70px;
+    margin-left: 5%;
+}
+.about .about-content {
+    flex: 0 0 100%;
+    max-width: 100%;
+}
+
+.about .about-content .about-text {
+    flex: 0 0 100%;
+    max-width: 100%;
+}
+
+.about .about-content .about-text h3 {
+    font-size: 24px;
+    margin-bottom: 15px;
+    font-weight: 700;
+    color: #302e4d;
+}
+
+.about .about-content .about-text p {
+    font-size: 16px;
+    line-height: 25px;
+    color: #999;
+}
+
+
+.about .about-content .personal-info .info-Item {
+    flex: 0 0 50%;
+    max-width: 50%;
+    width: 50%;
+}
+
+.about .about-content .personal-info .info-Item p {
+    font-weight: 600;
+    padding: 10px 0;
+    font-size: 16px;
+    color: white;
+    border-bottom: 1px solid #393939;
+}
+
+.about .about-content .personal-info .info-Item p span {
+    font-weight: 400;
+    color: #999;
+    margin-left: 4px;
+    display: inline-block;
+}
+
+.about .about-content .personal-info .buttons {
+    margin-top: 30px;
+}
+
+.about .about-content .personal-info .buttons .btn {
+    margin-top: 15px;
+
+}
+.personal-info {
+    width: 50%;
+}
+
+.info-Item {
+    font-size: 14px;
+    margin-bottom: -24px;
+}
+/*Skill*/
+#skill .progress .progress-bar-danger
+{
+    background: #D43F52;
+}
+#skill .text-top
+{
+    padding-top: 50px;
+}
+
+#skill small
+{
+    font-weight: bold;
+    float: right;
+}
+#skill .progress
+{
+   width: 100%;
+    border-radius: 4px;
+    background: #ffffff;
+    height: 4px;
+}
+#skill{
+    width: 600px;
+    padding-left: 60px;
+}
+#skill span{
+    font-weight: bold;
+    display: block;
+    padding-bottom: 20px;
+}
+.progress-bar-danger {
+    background-color: #d9534f;
+}
+
+.about .about-content .skills {
+    flex: 0 0 40%;
+    max-width: 40%;
+    margin-top: 40px;
+}
+
+.about .about-content .skills .skill-item {
+    flex: 0 0 100%;
+    max-width: 100%;
+}
+
+.about .about-content .skills .skill-item h5 {
+    line-height: 0;
+    font-weight: 400;
+    font-size: 16px;
+    color: white;
+    text-transform: capitalize;
+}
+
+.about .about-content .skills .skill-item .progress {
+    background-color: #393939;
+    height: 7px;
+    border-radius: 4px;
+    width: 100%;
+    position: relative;
+}
+
+.about .about-content .skills .skill-item .progress .progress-in {
+    position: absolute;
+    left: 0;
+    height: 100%;
+    top: 0;
+    border-radius: 4px;
+    background-color: #D43F52;
 }
