--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Titillium+Web');
+@import url('https://fonts.googleapis.com/css?family=Anton');
+
+
 body{
     margin: 0;
     font-family: 'Raleway', sans-serif;
@@ -10,9 +14,10 @@ body{
     #header {
         background-attachment: fixed;
     }
+
 }
+
 .header{
-    position: relative;
     height: 600px;
     min-height: 700px;
     background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/home0.jpg);
@@ -45,13 +50,22 @@ body{
 /*.back-arrow:hover {*/
 /*    color: #d43076;*/
 /*}*/
+.fixed-navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+.visible-title {
+    visibility: visible;
+}
 
 nav{
     background: rgb(21, 21, 21);
     box-shadow : 0px 4px 8px 2px rgb(0, 0, 0);
     height: 65px;
     width: 100%;
-    z-index: 20;
+    z-index: 40;
     font-family: "Open Sans", sans-serif;
     font-size: 19px;
     margin-top: -10px;
@@ -302,4 +316,85 @@ nav{
 .heading h2{
     margin-left: 100%;
     margin-top: 35px;
+}
+/*.services-content{*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    gap: 1rem;*/
+/*    box-sizing: border-box;*/
+/*}*/
+/*.services-content .services-box{*/
+/*    !*background-color: #101010;*!*/
+/*    !*border: 1px solid #666666;*!*/
+/*    !*border-radius: 10px;*!*/
+/*    !*padding: 30px 15px;*!*/
+/*    !*text-align: center;*!*/
+/*    !*transition: all 0.3s ease;*!*/
+/*    !*width: 260px;*!*/
+/*    padding: 20px;*/
+/*    width: 260px;*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    align-items: center;*/
+/*    text-align: center;*/
+/*    border-radius: 0.5rem;*/
+/*    border-bottom: 2px solid #666666;*/
+/*    box-shadow: 0 2px 7px;*/
+
+/*}*/
+/*.services-box p{*/
+/*    font-size: 15px;*/
+/*}*/
+/*.services-content .services-box :hover{*/
+/*    box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);*/
+/*}*/
+
+.services-content{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px,auto));
+    justify-content: center;
+    gap: 1rem;
+    margin-top: 2rem;
+}
+.services-box{
+    padding: 20px;
+    width: 260px;
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    text-align: center;
+    border-radius:0.5rem;
+    box-shadow: 0 2px 7px;
+    background-color: #222222;
+}
+.services-box .bx{
+    padding-top: 2px;
+    font-size: 54px;
+    color: #f3223d;
+}
+.services-box h3{
+    font-size: 1rem;
+    font-weight: 600;
+    margin: 0.3rem 0 0.4rem;
+    color: white;
+}
+.services-box p{
+    font-size: 16px;
+    font-weight: 500;
+    color: white;
+}
+.services-box:hover{
+    background: #393939;
+}
+.services-box:hover h3{
+    color: #f3223d;
+}
+.services-box:hover p{
+    color: #fff;
+}
+.services-box:hover .bx{
+    color: #f3223d;
+}
+.services-box:hover p{
+    color: #fff ;
 }
