--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -312,6 +312,8 @@ nav{
 #services{
     background-color: black;
     margin-top: 25px;
+    height: 640px;
+
 }
 .heading h2{
     margin-left: 100%;
