--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,8 +20,8 @@ body{
 .header{
     height: 600px;
     min-height: 700px;
-    background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/home0.jpg);
-    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/home0.jpg);
+    background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/Home3.JPEG);
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/Home3.JPEG);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
