--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Titillium+Web');
 @import url('https://fonts.googleapis.com/css?family=Anton');
 
-
+html {
+    scroll-behavior: smooth;
+}
 body{
     margin: 0;
     font-family: 'Raleway', sans-serif;
@@ -399,4 +401,12 @@ nav{
 }
 .services-box:hover p{
     color: #fff ;
+}
+
+
+/*................Projects................*/
+
+.projects .heading1{
+    margin-top: 30px;
+    margin-left: 5%;
 }
