--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -592,9 +592,11 @@ nav {
 
 .contact .contact-info {
     flex: 0 0 25%;
-    max-width: 25%;
+    max-width: 15%;
     text-align: center;
     margin-bottom: 60px;
+    margin-left: 108px;
+
 }
 .contact .contact-info .icon {
     display: inline-block;
@@ -602,6 +604,20 @@ nav {
 .contact .contact-info .icon .fa {
     font-size: 25px;
     color: #d7243f;
+}
+.contact .contact-info h4 {
+    font-size: 18px;
+    font-weight: 700;
+    color: #ffffff;
+    text-transform: capitalize;
+    margin: 15px 0 5px;
+}
+
+.contact .contact-info p {
+    font-size: 16px;
+    line-height: 25px;
+    color: rgba(255, 255, 255, 0.85);
+    font-weight: 400;
 }
 .contact .col-container {
     display: grid;
