--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -592,11 +592,11 @@ nav {
 }
 
 .contact .contact-info {
-    flex: 0 0 25%;
+    flex: 0 0 10%;
     max-width: 15%;
     text-align: center;
     margin-bottom: 60px;
-    margin-left: 108px;
+    margin-left: 10%;
 
 }
 .contact .contact-info .icon {
@@ -619,4 +619,60 @@ nav {
     line-height: 25px;
     color: rgba(255, 255, 255, 0.85);
     font-weight: 400;
+}
+.contact .contact-form {
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-left: 55px;
+}
+.contact .contact-form .col-6 {
+    flex: 0 0 44%;
+    max-width: 50%;
+}
+
+.contact .contact-form .col-12 {
+    flex: 0 0 100%;
+    max-width: 100%;
+}
+
+.contact .contact-form .form-item {
+    margin-bottom: 30px;
+}
+.contact .contact-form .form-item .form-control {
+    width: 80%;
+    height: 30px;
+    border-radius: 25px;
+    background: #222222;
+    border: 1px solid #383838;
+    padding: 10px 25px;
+    font-size: 16px;
+    color: #504e70;
+    transition: all 0.3s ease;
+}
+
+.contact .contact-form .form-item .form-control:focus {
+    box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
+}
+
+.contact .contact-form .form-item textarea .form-control {
+    height: 140px;
+}
+
+.contact .contact-form .btn {
+    height: 50px;
+    padding: 0 50px;
+    background-color: #d7243f;
+    border-radius: 25px;
+    transition: all 0.3s ease;
+    border: none;
+    color: white;
+
+}
+
+.row1{
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 40px;
+    margin-right: 40px;
+    position: relative;
 }
