--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -291,12 +291,14 @@ nav {
 }
 
 .about .about-content .personal-info .buttons {
+    padding: 0 50px;
     margin-top: 30px;
 }
 
 .about .about-content .personal-info .buttons .btn {
     margin-top: 15px;
-
+    text-decoration: none;
+    height: 23px;
 }
 
 .personal-info {
@@ -357,51 +359,34 @@ nav {
     margin-left: 430px;
 }
 
+.btn {
+    font-size: 16px;
+    font-weight: 500;
+    padding: 12px 35px;
+    color: white;
+    border-radius: 40px;
+    display: inline-block;
+    white-space: nowrap;
+    border: none;
+    background: #d7243f;
+    transition: all 0.3s ease;
+}
+
+.btn:hover {
+    transform: scale(1.05);
+}
+
+
 /*................Services................*/
 #services {
     background-color: black;
     margin-top: 25px;
     height: 640px;
-
 }
-
 .heading h2 {
     margin-left: 100%;
     margin-top: 35px;
 }
-
-/*.services-content{*/
-/*    display: flex;*/
-/*    justify-content: center;*/
-/*    gap: 1rem;*/
-/*    box-sizing: border-box;*/
-/*}*/
-/*.services-content .services-box{*/
-/*    !*background-color: #101010;*!*/
-/*    !*border: 1px solid #666666;*!*/
-/*    !*border-radius: 10px;*!*/
-/*    !*padding: 30px 15px;*!*/
-/*    !*text-align: center;*!*/
-/*    !*transition: all 0.3s ease;*!*/
-/*    !*width: 260px;*!*/
-/*    padding: 20px;*/
-/*    width: 260px;*/
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*    align-items: center;*/
-/*    text-align: center;*/
-/*    border-radius: 0.5rem;*/
-/*    border-bottom: 2px solid #666666;*/
-/*    box-shadow: 0 2px 7px;*/
-
-/*}*/
-/*.services-box p{*/
-/*    font-size: 15px;*/
-/*}*/
-/*.services-content .services-box :hover{*/
-/*    box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);*/
-/*}*/
-
 .services-content {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, auto));
@@ -684,18 +669,7 @@ nav {
     height: 140px;
 }
 
-.contact .contact-form .btn {
-    height: 50px;
-    padding: 0 50px;
-    background-color: #d7243f;
-    border-radius: 25px;
-    transition: all 0.3s ease;
-    border: none;
-    color: white;
-
-}
-
-.contact .title{
+.title{
     width: 55px;
     height: 4px;
     background-color: #da2843;
