--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -99,7 +99,7 @@
         height: 600px;
         min-height: 845px;
         width: 131%;
-        background-size: 120% 120%;
+
     }
 
     .about .about-content .about-text {
@@ -149,4 +149,9 @@
     footer{
         margin-left: 44%;
     }
+}
+
+@media (max-width: 425px) {
+
+
 }
